Added more events

--- a/dailySimulation.html
+++ b/dailySimulation.html
@@ -27,7 +27,10 @@
     {description:"Taking the bus home", time: 1140, mood:"🤕"},
     {description:"Taking shower", time: 240},
     {description:"Studying", time: 6000},
-    {description:"Homework", time: 6000}
+    {description:"Homework", time: 6000},
+    {description:"Watching Avatar the Last Airbender",time: 2000, mood:"🍿"},
+    {description:"Getting ready for bed",time: 800, mood:"🛌"},
+
     ];
     async function runThroughDay(dayActivities){
       for (const activity of dayActivities){
